[build-system]
requires = [
    "setuptools",
    "wheel",
    "Cython>=0.29.17",
    "numpy"
    ]

[tool.black]
line-length = 79
target_version = ['py37', 'py38', 'py39']
experimental_string_processing = true
exclude = '''

(
  /(
      \.git          # exclude a few common directories in the
    | build          # root of the project
    | dist
    | doc
  )/
  | sumu/validate.py
)
'''