[metadata]
version = attr: sumu.__version__

[flake8]
max-line-length = 79
target-version = ['py37']
ignore=
    # do not assign a lambda expression, use a def
    E731,
    # space before : (needed for how black formats slicing)
    E203,
    # invalid escape sequence '\m' (m is any letter) :
    # (needed for TeX)
    W605,
    # line break before binary operator
    W503,
    # line break after binary operator
    W504,
    # do not use variables named ‘l’, ‘O’, or ‘I’
    E741,